WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305489
offlineasm incorrectly lowers references to global labels
https://bugs.webkit.org/show_bug.cgi?id=305489
Summary
offlineasm incorrectly lowers references to global labels
Vassili Bykov
Reported
2026-01-14 10:16:49 PST
Feeding the following snippet into offlineasm: global _foo _foo: leap _foo, r0 ret produces this in LLIntAssembly.h: ".loc 5 1541\n" OFFLINE_ASM_GLOBAL_LABEL(foo) ".loc 5 1543\n" "movq " LOCAL_LABEL_STRING(foo) "@GOTPCREL(%rip), %rax \n" ".loc 5 1544\n" "ret \n" The label is incorrectly referenced using LOCAL_LABEL_STRING, as if it were declared using OFFLINE_ASM_LOCAL_LABEL(). On x86, LOCAL_LABEL_STRING(foo) is rendered as "Lfoo" and compilation fails because "Lfoo" is undefined.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-14 10:16:55 PST
<
rdar://problem/168153042
>
Vassili Bykov
Comment 2
2026-01-14 16:40:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56598
EWS
Comment 3
2026-01-16 09:14:28 PST
Committed
305717@main
(018769c9e260): <
https://commits.webkit.org/305717@main
> Reviewed commits have been landed. Closing PR #56598 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug