Source/WTF/wtf/InlineASM.h
@@ -52,10 +52,13 @@
 #endif
 
 #if HAVE(INTERNAL_VISIBILITY)
-#define LOCAL_REFERENCE(name) SYMBOL_STRING(name)
+#define LABEL_REFERENCE(name) SYMBOL_STRING(name)
 #else
-#define LOCAL_REFERENCE(name) GLOBAL_REFERENCE(name)
+#define LABEL_REFERENCE(name) GLOBAL_REFERENCE(name)
 #endif
+
+// Deprecated: misleading name. Will be removed once the dependency in WebKitAdditions is gone.
+#define LOCAL_REFERENCE(name) LABEL_REFERENCE(name)
 
 #if OS(DARWIN)
     // Mach-O platform
